2016-10-24 Massimo Manghi <mxmanghi@apache.org>
    * rivet/mod_rivet_ng: new directory to develop new 
    module having a Tcl based content generation script
    * rivet/packages/formbroker/formbroker.tcl: new method
    'reset' restores a form internal status
    * rivet/rivet-tcl/try.tcl: tab expansion to fix
    indentation
    * doc/xml/formbroker.xml: add XML manual page for the
    form broker package

2016-10-20 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: new method
    'response' returns an array with the last processed response
    or an array with the defaults value

2016-10-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: add response copy
    and default value management
    
2016-10-17 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: add global
    quoting switch, add method for single form variable method (untested)

2016-10-15 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: add quote 
    mechanism

2016-10-12 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: removed need
    for a form_name argument. Now forms receive automatic names.
    The list of fields whose validation failed is now
    a flat list of field_name - validation_error pairs suitable
    to be put in dictionary or array

2016-10-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/formbroker/formbroker.tcl: first stable
    version of the FormBroker package. The package checks and
    validates form data stored in response array as produced
    by ::rivet::response
    * contrib/validate_mac.tcl: example of validator checking
    and mangling a network mac address. This function is meant
    to work with the FormBroker

2016-10-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/mod_rivet_generator.c: improved comments in view of