@@ -412,12 +412,15 @@ Rivet_MergeConfig(apr_pool_t *p, void *basev, void *overridesv)
     RIVET_CONF_SELECT(rsc,base,overrides,rivet_default_error_script)
     RIVET_CONF_SELECT(rsc,base,overrides,rivet_abort_script)
     RIVET_CONF_SELECT(rsc,base,overrides,after_every_script)
-    RIVET_CONF_SELECT(rsc,base,overrides,upload_max)
 
+    rsc->default_cache_size = base->default_cache_size;
     rsc->separate_virtual_interps = base->separate_virtual_interps;
     rsc->honor_header_only_reqs = base->honor_header_only_reqs;
     rsc->separate_channels = base->separate_channels;
     rsc->mpm_bridge = base->mpm_bridge;
+    rsc->upload_max = base->upload_max;
+    rsc->upload_dir = base->upload_dir;
+    
 
     RIVET_CONF_SELECT(rsc,base,overrides,upload_dir)
     RIVET_CONF_SELECT(rsc,base,overrides,rivet_server_vars)
